2009-04-06 Richard Dale  <richard.j.dale@gmail.com>
* Added inspect() and pretty_print() methods to the WModelIndex class

2009-04-03 Richard Dale  <richard.j.dale@gmail.com>
* When the Ruby runtime starts it sets up signal handlers for all signals,
so that they can be handled with Signal#trap. However, that was disabling
the default behaviour of SIGINT, and control C would no longer terminate a
Wt::Ruby program the way it would the C++ equivalent. So reenable the default
behaviour for SIGINT and make the ruby program quit.

2009-04-01 Richard Dale  <richard.j.dale@gmail.com>
* Improved the INSTALL instructions
* WMenu#addItem wasn't returning the newly created WMenuItem
* Added the wt-homepage example to the Wt 3.x examples

2009-03-30 Richard Dale  <richard.j.dale@gmail.com>
* Raised the Wt::Ruby version number to 0.9.1 for the first release
* Recommend either Wt 2.2.3 or Wt 2.99.0 in the INSTALL instructions

2009-03-27 Richard Dale  <richard.j.dale@gmail.com>
* Special case the marshalling for WFlags types used in virtual methods.
* Change the WT_VERSION check comparison to use 0x02630000 because hex 63 
corresponds to the 99 in 2.99.0.

2009-03-26 Richard Dale  <richard.j.dale@gmail.com>
* Fix the marshalling for the std::vector<unsigned char> type
* Strip WFlags<> templates and leave the underlying enum for return types

2009-03-25 Richard Dale  <richard.j.dale@gmail.com>
* Added JSignal#createCall and JSignal#createEventCall methods
* Add the headers in Wt/Http to the Smoke library code generation

2009-03-23 Richard Dale  <richard.j.dale@gmail.com>
* Don't show boost classes as parents with rbwtapi as they aren't really part
of the public api
* Add marshallers for vectors of WRadioButtons and WGoogleMap::Coordinates
* Change Wt::EventSignal<void> to Wt::EventSignal<> as it no longer compiles
with '<void>' for Wt 2.99.0
* Make dispose() return nil rather than 'self' as it crashes in irb when irb
tries to call inspect() on the return value
