@@ -1,2 +1,3 @@
 add_subdirectory( bin )
+add_subdirectory( rails_support )
 add_subdirectory( src )
